translated missing bg texts in Store

--- a/core/i18n/resource/i18n/ja-JP.csv
+++ b/core/i18n/resource/i18n/ja-JP.csv
@@ -145,14 +145,14 @@
 "We found other products you might like","おすすめの商品がありました"
 "We use cookies to give you the best shopping experience.","ベストな買い物体験を提供する為にクッキーが使われています。"
 "We will send you details regarding the order","注文についての詳細を送ります"
-"We will send you the invoice to given e-mail address","頂いたメールアドレスに請求書を送ります"
+"We will send you the invoice to the given email address","頂いたメールアドレスに請求書を送ります"
 "Wishlist","お気に入りリスト"
 "You are offline","オフラインです"
 "You can also use","またこれらを使うことができます"
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","登録されたメールアドレスとパスワードを使ってログインできます。アカウント内では<b>プロフィール</b>の編集<b>注文の履歴</b>の確認<b>ニュースレター</b>への購読が行えます。"
 "You have been successfully subscribed to our newsletter!","ニュースレターへの購読が完了しました！"
 "You have no items to compare.","比べる商品がありません"
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","注文が終わりました。注文の状態は<b>注文ステータス</b>機能から確認できます。注文の注文の状態を確認できるリンクの入った注文の詳細がメールで送られます。"
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.","注文が終わりました。注文の状態は<b>注文ステータス</b>機能から確認できます。注文の注文の状態を確認できるリンクの入った注文の詳細がメールで送られます。"
 "You submitted your review for moderation.","You submitted your review for moderation."
 "You will receive Push notification after coming back online. You can confirm the order by clicking on it","オンラインになるとプッシュ通知が送られ、そこから注文の確認ができます。"
 "Your Account","アカウント"
@@ -169,4 +169,4 @@
 "register an account","アカウントを登録"
 "return to log in","戻ってログイン"
 "search","検索"
-"to find product you were looking for.","探している商品を見つける。"
+"to find the product you were looking for.","探している商品を見つける。"
