--- a/src/themes/default-procc/resource/i18n/ar-SY.csv
+++ b/src/themes/default-procc/resource/i18n/ar-SY.csv
@@ -207,7 +207,7 @@
 "Track my order","تتبع طلبيّتي"
 "Type your opinion","اكتب رأيك"
 "Type","النوع"
-"Unfortunately we can't find the page you are looking for.","عذراً لم نجد الصفحة التي تبحث عنها."
+"Unfortunately, we can't find the page you are looking for.","عذراً لم نجد الصفحة التي تبحث عنها."
 "United States","الولايات المتّحدة"
 "Update my preferences","تحديث "
 "Update my profile","تحديث ملفي"
@@ -222,7 +222,7 @@
 "We found other products you might like","منتجات أخرى قد تعجبك"
 "We use cookies to give you the best shopping experience.","نحن نستخدم ملفت تعريف الارتباط لتزويدك بأفضل تجربة تسوّق."
 "We will send you details regarding the order","سوف نرسل لك التفاصيل المتعلّقة بطلبيتك"
-"We will send you the invoice to given e-mail address","سنرسل الفاتورة لبريدك الإلكتروني المعطى"
+"We will send you the invoice to the given email address","سنرسل الفاتورة لبريدك الإلكتروني المعطى"
 "We've noticed Internal Server Error while rendering this request.","لاحظنا حصول خطأ داخلي في المخدّم أثناء تقديم هذا الطلب."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","لقد أرسلنا تعليمات ضبط كلمة المرور إلى بريدك الإلكتروني. يرجى تفقّد بريدك الإلكتروني والضغط على الرابط المرسل."
 "What can we improve?","ما الذي يمكننا تحسينه ؟"
@@ -234,7 +234,7 @@
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","يمكنك الدخول لحسابك باستخدام البريد الإلكتروني وكلمة المرور اللّذان عرفتهما سابقاً. يمكنك في حسابك<b>تعديل بياناتك،<b> ومراجعة <b>سجلات مشترياتك،</b> وتعديل اشتراكك <b>في النشرة البريديّة</b>"
 "You have been successfully subscribed to our newsletter!","تم اشتراكك في النشرة البريدية بنجاح!"
 "You have no items to compare.","لا يوجد منتجات للمقارنة."
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","تم إتمام طلبيتك بنجاح. يمكنك مراجعة حالة الطلبية باستخدام <b>حالة الطلبية</b>.سوف نرسل رسالة تأكيد الطلبية إلى بريدك الإلكتروني مع تفاصيل الطلبية ورابط يمكنك من مراجعة حالة الطلبية."
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.","تم إتمام طلبيتك بنجاح. يمكنك مراجعة حالة الطلبية باستخدام <b>حالة الطلبية</b>.سوف نرسل رسالة تأكيد الطلبية إلى بريدك الإلكتروني مع تفاصيل الطلبية ورابط يمكنك من مراجعة حالة الطلبية."
 "You must accept the terms and conditions.","يجب أن توافق على الشروط والأحكام."
 "You've entered an incorrect coupon code. Please try again.","لقد أدخل "
 "Your Account","حسابك"
@@ -261,5 +261,5 @@
 "search","البحث"
 "size","القياس"
 "size_filter","القياس"
-"to find product you were looking for.","لإيجاد المنتج الذي تبحث عنه."
+"to find the product you were looking for.","لإيجاد المنتج الذي تبحث عنه."
 "to find something beautiful for You!","لإيجاد شيء جميل لك!"
