--- a/src/themes/default-procc/resource/i18n/de-DE.csv
+++ b/src/themes/default-procc/resource/i18n/de-DE.csv
@@ -217,7 +217,7 @@
 "Track my order","Meine Bestellung verfolgen"
 "Type your opinion","Schreiben Sie Ihre Meinung"
 "Type","Typ"
-"Unfortunately we can't find the page you are looking for.","Leider kann die von Ihnen gesuchte Seite nicht gefunden werden."
+"Unfortunately, we can't find the page you are looking for.","Leider kann die von Ihnen gesuchte Seite nicht gefunden werden."
 "United States","Vereinigte Staaten"
 "Update my preferences","Einstellungen aktualisieren"
 "Update my profile","Mein Konto aktualisieren"
@@ -232,7 +232,7 @@
 "We found other products you might like","Wir haben andere Produkte gefunden, die Sie interessieren könnten"
 "We use cookies to give you the best shopping experience.","Wir verwenden Cookies, um Ihnen das beste Einkaufserlebnis zu bieten."
 "We will send you details regarding the order","Wir senden Ihnen Details bezüglich Ihrer Bestellung zu"
-"We will send you the invoice to given e-mail address","Wir senden Ihnen die Rechnung an die angegebene E-Mail-Adresse"
+"We will send you the invoice to the given email address","Wir senden Ihnen die Rechnung an die angegebene E-Mail-Adresse"
 "We've noticed Internal Server Error while rendering this request.","Bei der Verarbeitung Ihrer Anfrage gab es einen internen Fehler."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Wir haben Ihnen eine Anleitung zum Zurücksetzen des Passworts an Ihre E-Mail-Adresse gesendet. Bitte überprüfen Sie Ihren Posteingang und folgen Sie dem Link."
 "What can we improve?","Was können wir verbessern?"
@@ -244,7 +244,7 @@
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","Sie können sich mit Ihrer angegebenen E-Mail-Adresse und Ihrem Passwort in Ihrem Konto anmelden. In Ihrem Konto können Sie Ihr <b>Profil bearbeiten</b>, Ihren <b>Transaktionsverlauf prüfen</b>und Ihre <b>Newsletteranmeldung bearbeiten.</b>"
 "You have been successfully subscribed to our newsletter!","Sie haben unseren Newsletter erfolgreich abonniert!"
 "You have no items to compare.","Es gibt keine Artikel zum Vergleichen."
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","Sie haben erfolgreich eine Bestellung abgegeben. Sie können den Status Ihrer Bestellung abrufen, indem Sie unser <b>Lieferstatus</b>-Feature nutzen. Sie werden eine Bestellbestätigung per E-Mail erhalten mit den Details Ihrer Bestellung und einem Link zur Sendungsverfolgung."
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.","Sie haben erfolgreich eine Bestellung abgegeben. Sie können den Status Ihrer Bestellung abrufen, indem Sie unser <b>Lieferstatus</b>-Feature nutzen. Sie werden eine Bestellbestätigung per E-Mail erhalten mit den Details Ihrer Bestellung und einem Link zur Sendungsverfolgung."
 "You must accept the terms and conditions.","Sie müssen die Allgemeinen Geschäftsbedingungen akzeptieren."
 "You've entered an incorrect coupon code. Please try again.","Sie haben einen falschen Coupon-Code eingegeben. Bitte versuchen Sie es erneut."
 "Your Account","Ihr Account"
@@ -271,5 +271,5 @@
 "search","die Suche"
 "size","Größe"
 "size_filter","Größe"
-"to find product you were looking for.","benutzen, um das gesuchte Produkt zu finden."
+"to find the product you were looking for.","benutzen, um das gesuchte Produkt zu finden."
 "to find something beautiful for You!","um etwas Schönes für Sie zu finden!"
