--- a/src/themes/default-procc/resource/i18n/it-IT.csv
+++ b/src/themes/default-procc/resource/i18n/it-IT.csv
@@ -223,7 +223,7 @@
 "Terms and conditions","Termini e condizioni"
 "The OrderNumber is {id}","Il numero dell'ordine è {id}"
 "A new account will be created with the purchase. You will receive details by e-mail.","Il nuovo account verrà creato con l'acquisto. Riceverai le informazioni tramite email"
-"The order can not be transfered because of server error. Order has been queued","L'ordine non può essere evaso a causa di un errore del server. L'ordine è stato messo in coda."
+"The order can not be transferred because of a server error. The order has been queued","L'ordine non può essere evaso a causa di un errore del server. L'ordine è stato messo in coda."
 "The server order id has been set to ","L'ID dell'ordine sul server è stato impostato a "
 "This product is out of stock.","Il prodotto non è disponibile."
 "To finish the order just come back to our store while online. Your order will be sent to the server as soon as you come back here while online and then confirmed regarding the stock quantities of selected items","Per completare l'ordine ritorna sul sito quando sarai online. Il tuo ordine verrà spedito al server appena tornerai qui con la linea internet attiva e poi confermato in accordo con le quantità rimanenti dei prodotti selezionati"
@@ -231,7 +231,7 @@
 "Track my order","Traccia il mio ordine"
 "Type your opinion","Scrivi la tua opinione"
 "Type","Tipo"
-"Unfortunately we can't find the page you are looking for.","Sfortunatamente non riusciamo a trovare la pagina che stai cercando."
+"Unfortunately, we can't find the page you are looking for.","Sfortunatamente non riusciamo a trovare la pagina che stai cercando."
 "United States","Stati Uniti"
 "Update my preferences","Aggiorna le preferenze"
 "Update my profile","Aggiorna il profilo"
@@ -247,7 +247,7 @@
 "We found other products you might like","Abbiamo trovato dei prodotti che ti potrebbero piacere"
 "We use cookies to give you the best shopping experience.","Utilizziamo cookies per offrirvi la migliore esperienza d'acquisto possibile."
 "We will send you details regarding the order","Ti invieremo i dettagli dell'ordine"
-"We will send you the invoice to given e-mail address","La fattura verrà inviata all'indirizzo email inserito"
+"We will send you the invoice to the given email address","La fattura verrà inviata all'indirizzo email inserito"
 "We've noticed Internal Server Error while rendering this request.","È stato rilevatao un errore interno del server durante questa richiesta."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Abbiamo inviato le istruzioni per reimpostare la password al tuo indirizzo email. Verifica la tua casella di posta e segui il link."
 "What can we improve?","Cosa possiamo migliorare?"
@@ -262,7 +262,7 @@
 "You have been successfully subscribed to our newsletter!","Ti sei iscritto alla newsletter con successo!"
 "You have been successfully unsubscribed from our newsletter!","Ti sei discritto con successo dalla nostra newsletter!"
 "You have no items to compare.","Non hai niente da confrontare."
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","Il tuo ordine è stato effettuato con successo. Puoi controllarne lo stato attraverso l'opzione <b>stato della consegna</b>. Riceverai un'email di conferma con tutti i dettagli dell'ordine ed un link per seguirne il progresso."
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.","Il tuo ordine è stato effettuato con successo. Puoi controllarne lo stato attraverso l'opzione <b>stato della consegna</b>. Riceverai un'email di conferma con tutti i dettagli dell'ordine ed un link per seguirne il progresso."
 "You must accept the terms and conditions.","È necessario accettare le condizioni generali del servizio."
 "You will receive Push notification after coming back online. You can confirm the order by clicking on it","Riceverai le notifiche push appena tornerai online. Conferma l'ordine cliccando su esso."
 "You've entered an incorrect coupon code. Please try again.","Hai inserito un coupon errato o inesistente. Riprova."
@@ -290,6 +290,6 @@
 "search","cerca"
 "size","taglia"
 "size_filter","Taglia"
-"to find product you were looking for.","per trovare il prodotto che cerchi."
+"to find the product you were looking for.","per trovare il prodotto che cerchi."
 "to find something beautiful for You!","per trovare qualcosa di bello per te!"
 "{count} items","{count} elementi"
