--- a/src/themes/default-procc/resource/i18n/ja-JP.csv
+++ b/src/themes/default-procc/resource/i18n/ja-JP.csv
@@ -178,7 +178,7 @@
 "Toggle password visibility","パスワードの見え方の切り替え"
 "Track my order","注文のトラッキング"
 "Type","タイプ"
-"Unfortunately we can't find the page you are looking for.","すみません、お探しのページはありません。"
+"Unfortunately, we can't find the page you are looking for.","すみません、お探しのページはありません。"
 "Update my preferences","設定を更新する"
 "Update my profile","プロフィールを更新"
 "Update my shipping details","買い物の詳細の更新"
@@ -191,7 +191,7 @@
 "We can't find the page","ページがありません"
 "We use cookies to give you the best shopping experience.","買い物をできるだけ良いものにするためクッキーを使っています"
 "We will send you details regarding the order","注文に関する詳細を送ります"
-"We will send you the invoice to given e-mail address","指定されたメールアドレスに請求書を送ります"
+"We will send you the invoice to the given email address","指定されたメールアドレスに請求書を送ります"
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","パスワードリセットのメールを送りました。メールの中にあるリンクをクリックしてください。"
 "Wishlist","欲しいモノリスト"
 "Women fashion","女性のファッション"
@@ -219,5 +219,5 @@
 "return to log in","ログインに戻る"
 "search","検索"
 "size_filter","サイズ"
-"to find product you were looking for.","から欲しい商品を見つける"
+"to find the product you were looking for.","から欲しい商品を見つける"
 "to find something beautiful for You!","あなたにあった素敵なものを見つけましょう!"
