--- a/src/themes/default-procc/resource/i18n/jp-JP.csv
+++ b/src/themes/default-procc/resource/i18n/jp-JP.csv
@@ -44,7 +44,7 @@
 "Terms and conditions","利用規約"
 "Place the order","注文を行う"
 "Edit payment","支払いの編集"
-"We will send you the invoice to given e-mail address","指定されたメールアドレスに請求書を送ります"
+"We will send you the invoice to the given email address","指定されたメールアドレスに請求書を送ります"
 "Payment method","決済方法"
 "Go review the order","注文の確認"
 "Phone number may be needed by carrier","発送に電話番号が必要な事があります"
@@ -120,14 +120,14 @@
 "You have no items to compare.","比較するアイテムはありません"
 "New Luma Yoga Collection","Luma Yogaの新しいコレクション"
 "We can't find the page","ページがありません"
-"Unfortunately we can't find the page you are looking for.","すみません、お探しのページはありません。"
+"Unfortunately, we can't find the page you are looking for.","すみません、お探しのページはありません。"
 "If you need an assistance you can drop us a line on","お問合わせはこちらからお願いします"
 "a chat","チャット"
 "or write to us through","かこちらから連絡ください"
 "a contact page","コンタクトページ"
 "You can also use","こちらを使うこともできます"
 "search","検索"
-"to find product you were looking for.","から欲しい商品を見つける"
+"to find the product you were looking for.","から欲しい商品を見つける"
 "See our bestsellers","ベストセラーを見る"
 "You are offline. Some features might not be available.","オフラインです、使えない機能があります"
 "Search","検索"
