--- a/src/themes/default-procc/resource/i18n/nl-NL.csv
+++ b/src/themes/default-procc/resource/i18n/nl-NL.csv
@@ -219,7 +219,7 @@ Terms and conditions,Algemene voorwaarden
 A new account will be created with the purchase. You will receive details by e-mail.,Het nieuwe account wordt aangemaakt tijdens de aankoop. U ontvangt de details per e-mail.
 The product, category, or CMS page is not available in Offline mode. Redirecting to Home.,Deze pagina is niet beschikbaar in offline modus. U wordt doorgestuurd naar de homepage.
 Track my order,Volg mijn bestelling
-Unfortunately we can't find the page you are looking for.,Helaas kunnen we niet vinden waar u naar op zoek bent
+Unfortunately, we can't find the page you are looking for.,Helaas kunnen we niet vinden waar u naar op zoek bent
 Update my preferences,Update mijn voorkeuren
 Update my profile,Update mijn profiel
 Update my shipping details,Update mijn verzendgegevens
@@ -231,7 +231,7 @@ View order,Bekijk order
 We can't find the page,We kunnen de pagina niet vinden
 We use cookies to give you the best shopping experience.,Wij gebruiken cookies om u de beste winkelervaring te bieden.
 We will send you details regarding the order,We sturen u de details over de bestelling
-We will send you the invoice to given e-mail address,We zullen u de factuur sturen naar het opgegeven email-adres
+We will send you the invoice to the given email address,We zullen u de factuur sturen naar het opgegeven email-adres
 We've sent password reset instructions to your email. Check your inbox and follow the link.,We hebben instructies voor het opnieuw instellen van het wachtwoord verzonden naar uw e-mailadres. Controleer uw inbox en volg de link.
 Wishlist,Verlanglijst
 Women fashion,Damesmode
@@ -239,7 +239,7 @@ You are logged in as,U bent ingelogd als
 You can also use,U kunt ook de
 You have been successfully subscribed to our newsletter!,U bent succesvol ingeschreven voor onze nieuwsbrief!!
 You have no items to compare.,U heeft geen producten om te vergelijken
-You have successfully placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.,U hebt de bestelling succesvol geplaatst. U kunt de status van onze bezorging controleren door onze bezorgstatus te gebruiken. U ontvangt een orderbevestiging per e-mail met de details van uw bestelling en een link naar het voortgangspad.
+You have successfully placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.,U hebt de bestelling succesvol geplaatst. U kunt de status van onze bezorging controleren door onze bezorgstatus te gebruiken. U ontvangt een orderbevestiging per e-mail met de details van uw bestelling en een link naar het voortgangspad.
 You must accept the terms and conditions.,U moet de voorwaarden accepteren.
 Your Account,Uw Account
 Your choice,Jouw keuze
@@ -261,5 +261,5 @@ register an account,registreer een account
 return to log in,keer terug om in te loggen
 search,zoekfunctie
 to account,naar account
-to find product you were looking for.,gebruiken om een product te vinden.
+to find the product you were looking for.,gebruiken om een product te vinden.
 to find something beautiful for You!,om iets moois voor jou te vinden!
