--- a/src/themes/default/resource/i18n/cs-CZ.csv
+++ b/src/themes/default/resource/i18n/cs-CZ.csv
@@ -210,7 +210,7 @@
 "Track my order","Sledovat objednávku"
 "Type your opinion","Napište svůj názor"
 "Type","Typ"
-"Unfortunately we can't find the page you are looking for.","Bohužel nemůžeme najít stránku, kterou hledáte."
+"Unfortunately, we can't find the page you are looking for.","Bohužel nemůžeme najít stránku, kterou hledáte."
 "United States","Spojené státy"
 "Update my preferences","Aktualizujte své předvolby"
 "Update my profile","Aktualizovat můj profil
@@ -225,7 +225,7 @@
 "We found other products you might like","Vybrali jsme produkty, které by se vám mohli líbit"
 "We use cookies to give you the best shopping experience.","Používáme soubory cookies, abychom vám poskytli ten nejlepší nákupní zážitek."
 "We will send you details regarding the order","Pošleme vám podrobnosti o objednávce"
-"We will send you the invoice to given e-mail address","Fakturu vám zašleme na danou e-mailovou adresu"
+"We will send you the invoice to the given email address","Fakturu vám zašleme na danou e-mailovou adresu"
 "We've noticed Internal Server Error while rendering this request.","Při vyřizování této žádosti jsme zaznamenali interní chybu serveru."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Na e-mail jsme vám zaslali informace pro obnovení hesla. Zkontrolujte si příchozí poštu a postupujte dle zaslaného odkazu"
 "What we can improve?","Co můžeme zlepšit?"
@@ -237,7 +237,7 @@
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","Můžete se přihlásit ke svému účtu pomocí e-mailu a hesla, které byly dříve nastaveny. Na svém účtu můžete <b>upravovat informace na svém profilu,</b> zkontrolovat <b>historii transakcí,</b> upravit <b>odběr novinek.</b>"
 "You have been successfully subscribed to our newsletter!","Byli jste úspěšně přihlášeni k odběru našich novinek!"
 "You have no items to compare.","Nemáte žádné položky k porovnání."
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress."," Úspěšně jste zadali objednávku. Stav objednávky můžete zkontrolovat pomocí naší kontroly <b>stavu objednávky</b>. Obdržíte e-mail s potvrzením objednávky s podrobnostmi o objednávce a odkazem ke sledování jejího stavu."
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress."," Úspěšně jste zadali objednávku. Stav objednávky můžete zkontrolovat pomocí naší kontroly <b>stavu objednávky</b>. Obdržíte e-mail s potvrzením objednávky s podrobnostmi o objednávce a odkazem ke sledování jejího stavu."
 "You must accept the terms and conditions.","Musíte souhlasit se smluvními podmínkami."
 "You've entered an incorrect coupon code. Please try again.","Zadali jste nesprávný kuponový kód. Prosím zkuste znovu."
 "Your Account","Váš účet"
@@ -264,5 +264,5 @@
 "search","vyhledávání"
 "size","velikost"
 "size_filter","Velikost"
-"to find product you were looking for.","pro nalezení produktů, které hledáte."
+"to find the product you were looking for.","pro nalezení produktů, které hledáte."
 "to find something beautiful for You!","najděte pro sebe něco krásného!"
