--- a/src/themes/default/resource/i18n/fr-FR.csv
+++ b/src/themes/default/resource/i18n/fr-FR.csv
@@ -198,7 +198,7 @@
 "Track my order","Suivre ma commande"
 "Type your opinion","Exprimez votre opinion"
 "Type","Type"
-"Unfortunately we can't find the page you are looking for.","Malheureusement, nous ne pouvons pas trouver la page que vous recherchez."
+"Unfortunately, we can't find the page you are looking for.","Malheureusement, nous ne pouvons pas trouver la page que vous recherchez."
 "United States","États-Unis"
 "Update my preferences","Mettre à jour mes préférences"
 "Update my profile","Mettre à jour mon profil"
@@ -213,7 +213,7 @@
 "We found other products you might like","Nous avons trouvé d'autres produits que vous pourriez aimer"
 "We use cookies to give you the best shopping experience.","Nous utilisons des cookies pour vous offrir la meilleure expérience de vente."
 "We will send you details regarding the order","Nous vous enverrons les détails concernant la commande"
-"We will send you the invoice to given e-mail address","Nous vous enverrons la facture à l'adresse e-mail indiquée"
+"We will send you the invoice to the given email address","Nous vous enverrons la facture à l'adresse e-mail indiquée"
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Nous avons envoyé les instructions de réinitialisation du mot de passe à votre adresse e-mail. Vérifiez votre boîte de réception et suivez le lien."
 "What we can improve?","Que pouvons-nous améliorer ?"
 "Wishlist","Liste de souhaits"
@@ -224,7 +224,7 @@
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>"
 "You have been successfully subscribed to our newsletter!","Vous avez été inscrit avec succès à notre newsletter !"
 "You have no items to compare.","Vous n'avez pas de produits à comparer."
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","Votre commande a été enregistrée avec succès. Vous pouvez suivre l'état de votre commande en utilisant notre fonctionnalité <b>état de la commande</b>. Vous allez recevoir un e-mail de confirmation avec les détails de votre commande et un lien pour suivre son avancée."
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.","Votre commande a été enregistrée avec succès. Vous pouvez suivre l'état de votre commande en utilisant notre fonctionnalité <b>état de la commande</b>. Vous allez recevoir un e-mail de confirmation avec les détails de votre commande et un lien pour suivre son avancée."
 "You must accept the terms and conditions.","Vous devez accepter les conditions générales."
 "You've entered an incorrect coupon code. Please try again.","Vous avez saisi un code coupon incorrect. Veuillez réessayer."
 "Your Account","Votre Compte"
@@ -247,5 +247,5 @@
 "return to log in","Retour au login"
 "search","la recherche"
 "size_filter","Taille"
-"to find product you were looking for.","pour trouver le produit que vous cherchiez."
+"to find the product you were looking for.","pour trouver le produit que vous cherchiez."
 "to find something beautiful for You!","pour trouver de belles choses pour vous !"
