--- a/src/themes/default/resource/i18n/pl-PL.csv
+++ b/src/themes/default/resource/i18n/pl-PL.csv
@@ -191,7 +191,7 @@
 "Track my order","Śledź moje zamówienie"
 "Type your opinion","Twoja opinia"
 "Type","Typ"
-"Unfortunately we can't find the page you are looking for.","Niestety nie możemy znaleźć strony."
+"Unfortunately, we can't find the page you are looking for.","Niestety nie możemy znaleźć strony."
 "United States","Stany Zjednoczone"
 "Update my preferences","Zachowaj moje ustawienia"
 "Update my profile","Zachowaj zmiany"
@@ -206,7 +206,7 @@
 "We found other products you might like","Może Zainteresuje Cię również"
 "We use cookies to give you the best shopping experience.","Używamy plików cookies."
 "We will send you details regarding the order","Wyślemy Ci szczegóły Twojego zamówienia"
-"We will send you the invoice to given e-mail address","Wyślemy Ci fakturę na podany adres e-mail"
+"We will send you the invoice to the given email address","Wyślemy Ci fakturę na podany adres e-mail"
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Instrukcja dotycząca resetowania hasła została wysłana na Twój adres email. Sprawdź skrzynkę odbiorczą."
 "What we can improve?","Co możemy udoskonalić?"
 "Wishlist","Lista życzeń"
@@ -217,7 +217,7 @@
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","Możesz zalogować się na swoje konto, używając wcześniej zdefiniowanego adresu e-mail i hasła. Na swoim koncie możesz <b> edytować swoje dane profilu, </b> sprawdzić <b> historię transakcji, </b> edytować <b> subskrypcję. </b>"
 "You have been successfully subscribed to our newsletter!","Zostałeś dodany do listy naszych subskrybentów!"
 "You have no items to compare.","Nie wybrałeś produktów do porównania."
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","Z powodzeniem złożyłeś zamówienie. Możesz sprawdzić status swojego zamówienia, korzystając z opcji <b>status przesyłki</b>.Otrzymasz e-mail z potwierdzeniem zamówienia ze szczegółami zamówienia oraz linkiem do śledzenia jego postępu."
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.","Z powodzeniem złożyłeś zamówienie. Możesz sprawdzić status swojego zamówienia, korzystając z opcji <b>status przesyłki</b>.Otrzymasz e-mail z potwierdzeniem zamówienia ze szczegółami zamówienia oraz linkiem do śledzenia jego postępu."
 "You must accept the terms and conditions.","Musisz zaakceptować regulamin."
 "You've entered an incorrect coupon code. Please try again.","Podałeś nieprawidłowy kod kuponu. Proszę spróbuj ponownie."
 "Your Account","Twoje konto"
@@ -240,5 +240,5 @@
 "return to log in","powrót do logowania"
 "search","szukaj"
 "size_filter","Rozmiar"
-"to find product you were looking for.","aby znaleźć produkt, który szukasz."
+"to find the product you were looking for.","aby znaleźć produkt, który szukasz."
 "to find something beautiful for You!","znajdź coś dla siebie!"
