--- a/src/themes/default/resource/i18n/zh-cn.csv
+++ b/src/themes/default/resource/i18n/zh-cn.csv
@@ -206,7 +206,7 @@
 "Track my order","跟踪订单"
 "Type your opinion","输入你的意见"
 "Type","分类"
-"Unfortunately we can't find the page you are looking for.","很遗憾，我们找不到您要查找的页面."
+"Unfortunately, we can't find the page you are looking for.","很遗憾，我们找不到您要查找的页面."
 "United States","United States"
 "Update my preferences","更新我的参数"
 "Update my profile","更新头像"
@@ -221,7 +221,7 @@
 "We found other products you might like","猜你喜欢"
 "We use cookies to give you the best shopping experience.","我们使用cookies为您提供最佳的购物体验."
 "We will send you details regarding the order","我们会向您发送有关订单的详细信息"
-"We will send you the invoice to given e-mail address","我们将发票发送到你的邮箱"
+"We will send you the invoice to the given email address","我们将发票发送到你的邮箱"
 "We've noticed Internal Server Error while rendering this request.","我们在呈现此请求时注意到内部服务器错误."
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","W已经将密码重置说明发送到您的电子邮箱。 请检查您的收件箱，并点击重置密码链接"
 "What we can improve?","我们可以改进什么?"
@@ -233,7 +233,7 @@
 "You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","您可以使用之前定义的电子邮件和密码登录您的帐户。 在您的帐户中，您可以<b>修改个人资料数据，</b>检查<b>交易历史记录，</b>编辑<b>订阅简报。</b>"
 "You have been successfully subscribed to our newsletter!","你已成功订阅该新闻组!"
 "You have no items to compare.","您没有可比较的项目."
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","您已成功下订单。 您可以使用我们的<b>投放状态</b>功能查看订单状态。 您将收到订单确认电子邮件，其中包含订单的详细信息以及跟踪其进度的链接。"
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.","您已成功下订单。 您可以使用我们的<b>投放状态</b>功能查看订单状态。 您将收到订单确认电子邮件，其中包含订单的详细信息以及跟踪其进度的链接。"
 "You must accept the terms and conditions.","您必须接受条款和条件."
 "You've entered an incorrect coupon code. Please try again.","您输入了错误的优惠券代码。请再试一次。"
 "Your Account","你的账户"
@@ -259,5 +259,5 @@
 "search","搜索"
 "size","尺码"
 "size_filter","尺码"
-"to find product you were looking for.","找到你想要的产品."
+"to find the product you were looking for.","找到你想要的产品."
 "to find something beautiful for You!","为你寻找美好的东西!"
