--- a/src/themes/default-procc/resource/i18n/bg-BG.csv
+++ b/src/themes/default-procc/resource/i18n/bg-BG.csv
@@ -208,7 +208,7 @@
 "Store locator","Локатор на магазина"
 "Street name *","Име на улица *"
 "Street name","Име на улица"
-"Subscribe to the newsletter and receive a coupon for 10% off","Абонирайте се за бюлетина и получете купон с 10% отстъпка"
+"Subscribe to the newsletter and receive a coupon for 10% off","Абонирайте се за бюлетина за да получите код с 10% отстъпка"
 "Subscribe","Абониране"
 "Subtotal","Междинна сума"
 "Tax ID *","Данъчен номер *"
@@ -219,88 +219,84 @@
 "Terms and conditions","Условия за ползване"
 "The OrderNumber is {id}","Номерът на поръчката е {id}"
 "A new account will be created with the purchase. You will receive details by e-mail.","При покупката ще бъде създаден нов акаунт. Ще получите подробности по имейл."
-"The order can not be transfered because of server error. Order has been queued","The order can not be transfered because of server error. Order has been queued"
+"The order can not be transferred because of a server error. The order has been queued","Поръчката не може да бъде прехвърлена поради грешка в сървъра. Поръчката е сложена на опашката"
 "The server order id has been set to ","The server order id has been set to "
 "This product is out of stock.","This product is out of stock."
 "To finish the order just come back to our store while online. Your order will be sent to the server as soon as you come back here while online and then confirmed regarding the stock quantities of selected items","To finish the order just come back to our store while online. Your order will be sent to the server as soon as you come back here while online and then confirmed regarding the stock quantities of selected items"
-"Toggle password visibility","Toggle password visibility"
-"Track my order","Track my order"
-"Type your opinion","Type your opinion"
-"Type","Type"
-"Unfortunately we can't find the page you are looking for.","Unfortunately we can't find the page you are looking for."
-"United States","United States"
-"Update my preferences","Update my preferences"
-"Update my profile","Update my profile"
-"Update my shipping details","Update my shipping details"
-"Use my billing data","Use my billing data"
-"Use my company's address details","Use my company's address details"
-"Use my company's address details","Use my company's address details"
-"Value","Value"
-"View all","View all"
-"View order","View order"
+"Toggle password visibility","Превключване на видимостта на паролата"
+"Track my order","Проследяване на поръчката"
+"Type your opinion","Въведете вашето мнение"
+"Type","Тип"
+"Unfortunately, we can't find the page you are looking for.","За съжаление не можем да намерим страницата, която търсите."
+"United States","САЩ"
+"Update my preferences","Обновяване на предпочитанията"
+"Update my profile","Обновяване на профила"
+"Update my shipping details","Обновяване на данните за доставка"
+"Use my billing data","Използвайте данните ми за фактуриране"
+"Use my company's address details","Използвайте адресните данни на компанията ми"
+"Value","Стойност"
+"View all","Виж всички"
+"View order","Преглед на поръчката"
 "Vuestore","Vuestore"
-"We can't find the page","We can't find the page"
-"We found other products you might like","We found other products you might like"
-"We use cookies to give you the best shopping experience.","We use cookies to give you the best shopping experience."
-"We will send you details regarding the order","We will send you details regarding the order"
-"We will send you the invoice to given e-mail address","We will send you the invoice to given e-mail address"
-"We've noticed Internal Server Error while rendering this request.","We've noticed Internal Server Error while rendering this request."
-"We've sent password reset instructions to your email. Check your inbox and follow the link.","We've sent password reset instructions to your email. Check your inbox and follow the link."
-"What can we improve?","What can we improve?"
-"Wishlist","Wishlist"
-"Women fashion","Women fashion"
-"You are logged in as {firstname}","You are logged in as {firstname}"
-"You are offline","You are offline"
-"You are offline. Some features might not be available.","You are offline. Some features might not be available."
-"You can allow us to remind you about the order via push notification after coming back online. You'll only need to click on it to confirm.","You can allow us to remind you about the order via push notification after coming back online. You'll only need to click on it to confirm."
-"You can also use","You can also use"
-"You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>"
-"You have been successfully subscribed to our newsletter!","You have been successfully subscribed to our newsletter!"
-"You have been successfully unsubscribed from our newsletter!","You have been successfully unsubscribed from our newsletter!"
-"You have no items to compare.","You have no items to compare."
-"You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress.","You have successfuly placed the order. You can check status of your order by using our <b>delivery status</b> feature. You will receive an order confirmation e-mail with details of your order and a link to track its progress."
-"You must accept the terms and conditions.","You must accept the terms and conditions."
+"We can't find the page","Не можем да намерим страницата"
+"We found other products you might like","Открихме други продукти, които може да ви харесат"
+"We use cookies to give you the best shopping experience.","Ние използваме бисквитки, за да ви предоставим най-доброто пазаруване."
+"We will send you details regarding the order","Ще ви изпратим детайли относно поръчката"
+"We will send you the invoice to the given email address","Ще ви изпратим фактурата на посочения имейл"
+"We've noticed Internal Server Error while rendering this request.","Забелязахме вътрешна грешка в сървъра при визуализирането на тази заявка."
+"We've sent password reset instructions to your email. Check your inbox and follow the link.","Изпратихме инструкции за нулиране на паролата на вашия имейл. Проверете входящата си поща и следвайте линка."
+"What can we improve?","Какво можем да подобрим?"
+"Wishlist","Списък с желания"
+"Women fashion","Дамска мода"
+"You are logged in as {firstname}","Влезли сте като {firstname}"
+"You are offline","Не сте на линия"
+"You are offline. Some features might not be available.","Не сте на линия. Някои функции може да не са налични."
+"You can allow us to remind you about the order via push notification after coming back online. You'll only need to click on it to confirm.","Можете да ни позволите да ви напомним за поръчката чрез push известие, след като се върнете онлайн. Ще трябва само да кликнете върху него, за да потвърдите."
+"You can also use","Можете също да използвате"
+"You can log to your account using e-mail and password defined earlier. On your account you can <b>edit your profile data,</b> check <b>history of transactions,</b> edit <b>subscription to newsletter.</b>","Можете да влезете в акаунта си, като използвате имейл и парола, дефинирани по-рано. Във вашия акаунт можете да <b>редактирате данните на вашия профил,</b> да проверите <b>историята на транзакциите,</b> да редактирате <b>абонамента за бюлетин.</b>"
+"You have been successfully subscribed to our newsletter!","Успешно се абонирахте за нашия бюлетин!"
+"You have been successfully unsubscribed from our newsletter!","Успешно се отписахте от нашия бюлетин!"
+"You have no items to compare.","Нямате продукти за сравняване."
+"You have successfully placed the order. You can check the status of your order by using our <b>delivery status</b> feature. You will receive a confirmation e-mail with details of your order and a link to track its progress.","Успешно направихте поръчката си. Можете да проверите прогреса и, като използвате нашата функция <b>статус на доставка.</b> Ще получите имейл за потвърждение и данни на поръчката ви и линк за проследяване на нейния напредък."
+"You must accept the terms and conditions.","Трябва да приемете Общите условия."
 "You will receive Push notification after coming back online. You can confirm the order by clicking on it","You will receive Push notification after coming back online. You can confirm the order by clicking on it"
-"You've entered an incorrect coupon code. Please try again.","You've entered an incorrect coupon code. Please try again."
-"Your Account","Your Account"
-"Your feedback is important for us. Let us know what we could improve.","Your feedback is important for us. Let us know what we could improve."
-"Your purchase","Your purchase"
-"Your shopping cart is empty.","Your shopping cart is empty."
-"Your Wishlist is empty.","Your Wishlist is empty."
-"Zip-code *","Zip-code *"
-"Zip-code must have at least 3 letters.","Zip-code must have at least 3 letters."
-"Zip-code","Zip-code"
-"a chat","a chat"
-"a contact page","a contact page"
-"browse our catalog","browse our catalog"
-"color","color"
-"color_filter","Color"
-"erin_recommends_filter","Erin Recommends"
-"login to your account","login to your account"
-"login","login"
-"or write to us through","or write to us through"
-"or","or"
-"price_filter","Price"
-"register an account","register an account"
-"return to log in","return to log in"
-"search","search"
-"size","size"
-"size_filter","Size"
-"to find product you were looking for.","to find product you were looking for."
-"to find something beautiful for You!","to find something beautiful for You!"
-"{count} items","{count} items",
-"Thank you for your purchase","Thank you for your purchase",
-"Order number,","Order number:",
-"What are the next steps?a","What are the next steps?",
-"You will receive an email at","You will receive an email at",
-"confirming your order.","confirming your order.",
-"confirming your order.","confirming your order.",
-"You will receive another confirmation email at shipping. If you have any questions, see our","You will receive another confirmation email when shipping. If you have any questions, see the",
-"You can check the status of the order using your account's Order History","You can check the status of the order using your account's Order History",
-"Store your order's details in your ProCC Account","Store your order's details in your ProCC Account",
-"Save my Address Details","Save my Address Details",
-"Save my Payment Information in accordance with ProCC's Privacy Policy","Save my Payment Information in accordance with ProCC's Privacy Policy"
-"Save to Account","Save to Account"
-"feedbackSaved","Thank you"
-"An account for {email} already exists.","An account for {email} already exists."
+"You've entered an incorrect coupon code. Please try again.","Въведохте неправилен код за намаление. Моля, опитайте отново."
+"Your Account","Вашият акаунт"
+"Your feedback is important for us. Let us know what we could improve.","Вашето мнение е важно за нас. Кажете ни какво бихме могли да подобрим."
+"Your purchase","Вашата покупка"
+"Your shopping cart is empty.","Кошницата ви е празна"
+"Your Wishlist is empty.","Вашият списък с желания е празен."
+"Zip-code *","Пощенски код *"
+"Zip-code must have at least 3 letters.","Пощенският код трябва да има поне 3 букви."
+"Zip-code","Пощенски код"
+"a chat","в чата"
+"a contact page","страницата за контакт"
+"browse our catalog","разгледайте нашия каталог"
+"color","цвят"
+"color_filter","Цвят"
+"erin_recommends_filter","Ерин препоръчва"
+"login to your account","влезте в акаунта си"
+"login","вход"
+"or write to us through","или ни пишете чрез"
+"or","или"
+"price_filter","Цена"
+"register an account","регистрирайте акаунт"
+"return to log in","върнете се към влизане"
+"search","търсене"
+"size","размер"
+"size_filter","Размер"
+"to find the product you were looking for.","за да намерите продукта, който търсите."
+"to find something beautiful for You!","за да намерите нещо красиво за себе си!"
+"{count} items","{count} артикули",
+"Thank you for your purchase","Благодарим Ви за покупката",
+"What are the next steps?","Какви са следващите стъпки?",
+"You will receive an email at","Ще получите имейл на",
+"confirming your order.","потвърждавайки Вашата поръчка",
+"You can check the status of the order using your account Order History","Можете да проверите статуса на поръчката си чрез История на поръчките",
+"Store your order details in your ProCC Account","Съхранявайте данните за Вашите поръчки в ProCC профила си",
+"Save my Address Details","Запази данните ми за доставка",
+"Save my Payment Information in accordance with ProCC's Privacy Policy","Запази информацията ми за плащане в съответствие с Политиката за поверителност на ProCC"
+"Save to Account","Запазване в профила"
+"feedbackSaved","Благодаря Ви"
+"An account for {email} already exists.","Профилът за {email} вече съществува."
 
