--- a/src/themes/default/resource/i18n/es-ES.csv
+++ b/src/themes/default/resource/i18n/es-ES.csv
@@ -141,7 +141,7 @@
 "Terms and conditions","Términos y Condiciones"
 "A new account will be created with the purchase. You will receive details by e-mail.","La nueva cuenta se creará con la compra. Recibirá detalles sobre el correo electrónico."
 "Track my order","Seguir mi orden"
-"Unfortunately we can't find the page you are looking for.","Desafortunadamente no podemos encontrar la página que está buscando."
+"Unfortunately, we can't find the page you are looking for.","Desafortunadamente no podemos encontrar la página que está buscando."
 "Update my preferences","Actualizar mis preferencias"
 "Update my profile","Actualizar mi perfil"
 "Update my shipping details","Actualiza mis detalles de envío"
@@ -150,7 +150,7 @@
 "We can't find the page","No podemos encontrar la página"
 "We use cookies to give you the best shopping experience.","Utilizamos cookies para ofrecerle la mejor experiencia de compra."
 "We will send you details regarding the order","Le enviaremos detalles sobre el pedido"
-"We will send you the invoice to given e-mail address","Le enviaremos la factura a la dirección de correo electrónico especificada"
+"We will send you the invoice to the given email address","Le enviaremos la factura a la dirección de correo electrónico especificada"
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Hemos enviado instrucciones de restablecimiento de contraseña a su correo electrónico. Revisa tu bandeja de entrada y sigue el enlace."
 "Wishlist","Lista de Deseo"
 "Women fashion","Moda femenina"
@@ -177,5 +177,5 @@
 "return to log in","volver a iniciar sesión"
 "search","buscar"
 "size_filter","Tamaño"
-"to find product you were looking for.","para encontrar el producto que estabas buscando."
+"to find the product you were looking for.","para encontrar el producto que estabas buscando."
 "to find something beautiful for You!","para encontrar algo hermoso para ti!"
