--- a/src/themes/default/resource/i18n/pt-BR.csv
+++ b/src/themes/default/resource/i18n/pt-BR.csv
@@ -177,7 +177,7 @@
 "Toggle password visibility","Alternar visibilidade da senha"
 "Track my order","Rastrear meu pedido"
 "Type","Tipo"
-"Unfortunately we can't find the page you are looking for.","Infelizmente não conseguimos encontrar a página que você está procurando."
+"Unfortunately, we can't find the page you are looking for.","Infelizmente não conseguimos encontrar a página que você está procurando."
 "Update my preferences","Atualizar minhas preferências"
 "Update my profile","Atualizar meu perfil"
 "Update my shipping details","atualizar meus detalhes de entrega"
@@ -190,7 +190,7 @@
 "We can't find the page","Não encontramos a página"
 "We use cookies to give you the best shopping experience.","Nós utilizamos cookies para dar a você a melhor experiência de compra."
 "We will send you details regarding the order","Nós iremos enviar um e-mail para você com os detalhes do pedido"
-"We will send you the invoice to given e-mail address","Nós iremos enviar para você a fatura no e-mail informado "
+"We will send you the invoice to the given email address","Nós iremos enviar para você a fatura no e-mail informado "
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Nós enviamos um e-mail com instruções de como recuperar sua senha. Verifique sua Caixa de Entrada e clique no link."
 "Wishlist","Lista de Desejos"
 "Women fashion","Moda Feminina"
@@ -218,5 +218,5 @@
 "return to log in","Voltar para tela de login"
 "search","a busca"
 "size_filter","Tamanho"
-"to find product you were looking for.","para achar o produto que você está procurando."
+"to find the product you were looking for.","para achar o produto que você está procurando."
 "to find something beautiful for You!","para encontrar algo bonito para Você!"
