--- a/src/themes/default/resource/i18n/ru-RU.csv
+++ b/src/themes/default/resource/i18n/ru-RU.csv
@@ -177,7 +177,7 @@
 "Toggle password visibility","Переключить видимость пароля"
 "Track my order","Отследить заказ"
 "Type","Тип"
-"Unfortunately we can't find the page you are looking for.","К сожалению, мы не смогли найти запрашиваемую Вами страницу."
+"Unfortunately, we can't find the page you are looking for.","К сожалению, мы не смогли найти запрашиваемую Вами страницу."
 "Update my preferences","Обновить мои предпочтения"
 "Update my profile","Обновить личный кабинет"
 "Update my shipping details","Обновить детали доставки"
@@ -190,7 +190,7 @@
 "We can't find the page","Мы не смогли найти страницу"
 "We use cookies to give you the best shopping experience.","Для предоставления Вам лучшего сервиса мы используем cookies."
 "We will send you details regarding the order","Мы вышлем Вам детали заказа"
-"We will send you the invoice to given e-mail address","Мы вышлем Вам счет на указанный электронный адрес"
+"We will send you the invoice to the given email address","Мы вышлем Вам счет на указанный электронный адрес"
 "We've sent password reset instructions to your email. Check your inbox and follow the link.","Мы выслали на Ваш электронный адрес инструкцию по переустановке пароля. Проверьте почту и следуйте указанной там ссылке."
 "Wishlist","Список пожеланий"
 "Women fashion","Женская одежда"
@@ -218,5 +218,5 @@
 "return to log in","вернуться для авторизации"
 "search","поиском"
 "size_filter","Размер"
-"to find product you were looking for.","чтобы найти искомый Вами товар."
+"to find the product you were looking for.","чтобы найти искомый Вами товар."
 "to find something beautiful for You!","чтобы найти что-нибудь красивое для Вас!"
