--- a/src/themes/default-procc/resource/i18n/bg-BG.csv
+++ b/src/themes/default-procc/resource/i18n/bg-BG.csv
@@ -636,4 +636,6 @@
 "Your shopping cart is empty.","Количката Ви е празна."
 "Don"t hesitate and","Не се колебайте и"
 "My shipping details","Моите данни за доставка"
+"Can you make amazing photos? Sign up as a CC!","Можеш ли да правиш красиви снимкит? Регистрирай се като CC!"
+"Sign Up","Регистрация"
 
