--- a/src/themes/default-procc/resource/i18n/en-US.csv
+++ b/src/themes/default-procc/resource/i18n/en-US.csv
@@ -639,4 +639,6 @@
 "Your shopping cart is empty.","Your shopping cart is empty."
 "Don"t hesitate and","Don"t hesitate and"
 "My shipping details","My shipping details"
+"Can you make amazing photos? Sign up as a CC!","Can you make amazing photos? Sign up as a CC!"
+"Sign Up","Sign Up"
 
